--- a/BlazorRogueLike.csproj
+++ b/BlazorRogueLike.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="GoRogue" Version="2.6.4"/>
+  </ItemGroup>
 </Project>
